fix(OpenCloseBox.jsx) put overlay on top of box-body -> don't see scrollbar when open

--- a/src/components/parts/OpenCloseBox/OpenCloseBox.css
+++ b/src/components/parts/OpenCloseBox/OpenCloseBox.css
@@ -85,16 +85,30 @@
 	background: #272727; 
 }
 
+/* =================== Body-overlay */
+.body-container {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
+/* =================== Body-overlay */
+.body-overlay-container {
+	width: 100%;
+	height: 100%;
+  position: absolute;
+ 	top: 0;
+}
+
 /* =================== Body */
 .box-body {  
 	height: 100%;
 	width: 100%;
-
-	background: #E8E4E4;  
-	overflow: auto; 
+	overflow: auto;
+	background: #E8E4E4;   
 	box-sizing: border-box;
 	position: relative;
-}  
+}   
  
 /* =================== Content Container  */
 .content-container {  
